[v0.2.21-pt][pt][fix-dev-panel-gap]

--- a/public/style.css
+++ b/public/style.css
@@ -568,7 +568,7 @@ header {
 /* --- MODULE: Developer & Debug Panel (Fullscreen Overlay) --- */
 .dev-panel {
     position: fixed;
-    top: 40px;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
